<resources>
    <string name="app_name">nav</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="visit">GoTo</string>
    <string name="name">Name</string>
    <string name="yourname">Type your name</string>
    <string name="youremail">Type your email address</string>
    <string name="email">Email:</string>
    <string name="send">Send to UI2</string>
</resources>